--- a/과제.md
+++ b/과제.md
@@ -3,12 +3,12 @@
 
 ## 1주차 2024. 10. 14 ~ 2024. 10. 21
 ### 객체지향
-|  |  |
+| 책 | 범위 |
 |---|---|
 | 객체지향의 사실과 오해   | `ch01 ~ ch02`
 
 ### 알고리즘
-|  |  |  |
+| 난이도 | 번호 | 문제명 |
 |---|---|---|
 | `B3`   | **4153** | [**직각삼각형**](https://www.acmicpc.net/problem/4153)
 | `B3`   | **30802** | [**웰컴 키트**](https://www.acmicpc.net/problem/30802)
