2주차 과제 갱신

--- a/과제.md
+++ b/과제.md
@@ -13,7 +13,20 @@
 | `B3`   | **4153** | [**직각삼각형**](https://www.acmicpc.net/problem/4153)
 | `B3`   | **30802** | [**웰컴 키트**](https://www.acmicpc.net/problem/30802)
 | `B2`   | **1978** | [**소수 찾기**](https://www.acmicpc.net/problem/1978)
+
+<br><br><br>
+
+## 2주차 2024. 10. 21 ~ 2024. 10. 28
+### 객체지향
+| 책 | 범위 |
+|:---|:---|
+| 객체지향의 사실과 오해   | `ch03`
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
 | `B2`   | **2231** | [**분해합**](https://www.acmicpc.net/problem/2231)
 | `B2`   | **2292** | [**벌집**](https://www.acmicpc.net/problem/2292)
+| `B2`   | **2798** | [**블랙잭**](https://www.acmicpc.net/problem/2292)
 
 <br><br><br>
