과제 업데이트

--- a/과제.md
+++ b/과제.md
@@ -30,3 +30,18 @@
 | `B2`   | **2798** | [**블랙잭**](https://www.acmicpc.net/problem/2292)
 
 <br><br><br>
+
+## 3주차 2024. 10. 28 ~ 2024. 11. 04
+### 객체지향
+| 책 | 범위 |
+|:---|:---|
+| 객체지향의 사실과 오해   | `ch04`
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `B2`   | **15829** | [**Hashing**](https://www.acmicpc.net/problem/15829)
+| `B1`   | **1259** | [**팰린드롬수**](https://www.acmicpc.net/problem/1259)
+| `B1`   | **1546** | [**평균**](https://www.acmicpc.net/problem/1546)
+
+<br><br><br>
