--- a/과제.md
+++ b/과제.md
@@ -45,3 +45,18 @@
 | `B1`   | **1546** | [**평균**](https://www.acmicpc.net/problem/1546)
 
 <br><br><br>
+
+## 4주차 2024. 11. 04 ~ 2024. 11. 12
+### 객체지향
+| 책 | 범위 |
+|:---|:---|
+| 객체지향의 사실과 오해   | `ch05`
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `B1`   | **2609** | [**최대공약수와 최대공배수**](https://www.acmicpc.net/problem/2609)
+| `B1`   | **2775** | [**부녀회장이 될테야**](https://www.acmicpc.net/problem/2775)
+| `B1`   | **2869** | [**달팽이는 올라가고 싶다**](https://www.acmicpc.net/problem/2869)
+
+<br><br><br>
