--- a/과제.md
+++ b/과제.md
@@ -60,3 +60,14 @@
 | `B1`   | **2869** | [**달팽이는 올라가고 싶다**](https://www.acmicpc.net/problem/2869)
 
 <br><br><br>
+
+## 5주차 2024. 11. 12 ~ 2024. 11. 18
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `B1`   | **10989** | [**수 정렬하기 3**](https://www.acmicpc.net/problem/10989)
+| `B1`   | **11050** | [**이항 계수 1**](https://www.acmicpc.net/problem/11050)
+| `B1`   | **28702** | [**FizzBuzz**](https://www.acmicpc.net/problem/28702)
+
+<br><br><br>
