--- a/과제.md
+++ b/과제.md
@@ -71,3 +71,18 @@
 | `B1`   | **28702** | [**FizzBuzz**](https://www.acmicpc.net/problem/28702)
 
 <br><br><br>
+
+## 6주차 2024. 11. 18 ~ 2024. 11. 26
+### 객체지향
+| 책 | 범위 |
+|:---|:---|
+| 객체지향의 사실과 오해   | `ch06`
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `S5`   | **1181** | [**단어 정렬**](https://www.acmicpc.net/problem/1181)
+| `S5`   | **1436** | [**영화감독 숌**](https://www.acmicpc.net/problem/1436)
+| `S5`   | **1676** | [**팩토리얼 0의 개수**](https://www.acmicpc.net/problem/1676)
+
+<br><br><br>
