과제 업데이트

--- a/과제.md
+++ b/과제.md
@@ -86,3 +86,19 @@
 | `S5`   | **1676** | [**팩토리얼 0의 개수**](https://www.acmicpc.net/problem/1676)
 
 <br><br><br>
+
+
+## 7주차 2024. 11. 26 ~ 2024. 12. 02
+### 객체지향
+| 책 | 범위 |
+|:---|:---|
+| 객체지향의 사실과 오해   | `ch07`
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `S5`   | **2751** | [**수 정렬하기 2**](https://www.acmicpc.net/problem/2751)
+| `S5`   | **7568** | [**덩치**](https://www.acmicpc.net/problem/7568)
+| `S5`   | **10814** | [**나이순 정렬**](https://www.acmicpc.net/problem/10814)
+
+<br><br><br>
