과제 업데이트

--- a/과제.md
+++ b/과제.md
@@ -102,3 +102,14 @@
 | `S5`   | **10814** | [**나이순 정렬**](https://www.acmicpc.net/problem/10814)
 
 <br><br><br>
+
+## 8주차 2024. 12. 02 ~ 2024. 12. 09
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `S5`   | **11650** | [**좌표 정렬하기**](https://www.acmicpc.net/problem/11650)
+| `S4`   | **11651** | [**좌표 정렬하기 2**](https://www.acmicpc.net/problem/11651)
+| `S4`   | **1018** | [**체스판 다시 칠하기**](https://www.acmicpc.net/problem/1018)
+
+<br><br><br>
