과제 업데이트

--- a/과제.md
+++ b/과제.md
@@ -113,3 +113,14 @@
 | `S4`   | **1018** | [**체스판 다시 칠하기**](https://www.acmicpc.net/problem/1018)
 
 <br><br><br>
+
+## 9주차 2024. 12. 09 ~ 2024. 12. 16
+
+### 알고리즘
+| 난이도 | 번호 | 문제명 |
+|---|---|---|
+| `S4`   | **1920** | [**수 찾기**](https://www.acmicpc.net/problem/1920)
+| `S4`   | **2164** | [**카드2**](https://www.acmicpc.net/problem/2164)
+| `S4`   | **2839** | [**설탕 배달**](https://www.acmicpc.net/problem/2839)
+
+<br><br><br>
